# solvedesk-ai

./: config.db  main.py  pyproject.toml  readme.md  requirements2.txt  setup.py
api/: dependencies.py  startup.py
api/auth/: jwt_provider.py
api/handlers/: auth_handlers.py
api/requests/: issue_request.py  search_request.py
api/responses/: solution_response.py
api/routes/: crud.py  explain.py  search.py  sync.py
application/: dependencies.py
application/services/builders/: charts_builder.py  env_builder.py
application/services/chunks/: chunkers.py
domain/enums/: allowed_extensions.py  allowed_types.py  import_status.py
domain/ports/: collection_manager.py  embedding_provider.py  env_builder.py  external_data_source.py  vector_store.py
infrastructure/: dependencies.py
infrastructure/data_context/: data_sync_service.py  external_api_source.py  external_data_loader.py
infrastructure/generators/: ollama.py
infrastructure/installers/: model_downloader.py  require_installer.py
infrastructure/transformers/: sentence_transformer_provider.py
infrastructure/vector_database/: chroma_store.py  collection_manager.py
monitoring/: readme.md
solvedesk_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
solvedesk_cmd/: cmd.py
solvedesk_cmd/api/: dependencies.py
solvedesk_cmd/application/: dependencies.py
solvedesk_cmd/commands/: conf.py  data.py  db.py  llm.py  main.py  security.py  sync.py
solvedesk_cmd/infrastructure/: dependencies.py
solvedesk_cmd/subprocesses/: requirements.py
(+32 files in other folders)
