[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solvedesk-ai"
version = "0.3.0"
description = "Local RAG framework for building intelligent knowledge bases"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Dominik Hofman" }
]
dependencies = [
  "typer",
  "fastapi",
  "chromadb",
  "sentence-transformers",
  "python-dotenv",
  "matplotlib",
  "numpy",
  "pandas",
  "scikit-learn"
]

[project.scripts]
solvedesk = "solvedesk_cmd.cmd:app"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "solvedesk_cmd*",
    "api*",
    "application*",
    "domain*",
    "infrastructure*",
    "monitoring*"
]